crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__impl_where.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "impl Show[User] where a: 1 {}"
---
alder::syntax

  × I was expecting a trait name in this bound
   ╭─[/project/src/main.ald:1:26]
 1 │ impl Show[User] where a: 1 {}
   · ┬                        ┬
   · │                        ╰── expected an upper-case trait path
   · ╰── this impl declaration starts here
   ╰────
