crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__import_group_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: pub import (json io)
---
alder::syntax

  × I was expecting `,` or `)` after this imported module
   ╭─[/project/src/main.ald:1:18]
 1 │ pub import (json io)
   ·            ┬     ┬
   ·            │     ╰── expected `,` or `)`
   ·            ╰── this `(` opens here
   ╰────
