crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__import_names_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "import @alder/http.{ get Request }"
---
alder::syntax

  × I was expecting `,` or `}` after this imported name
   ╭─[/project/src/main.ald:1:26]
 1 │ import @alder/http.{ get Request }
   ·                    ┬     ┬
   ·                    │     ╰── expected `,` or `}`
   ·                    ╰── this `{` opens here
   ╰────
