crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__import_path_package.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: import @alder/
---
alder::syntax

  × I was expecting a package name after `/` at the end of the file
   ╭─[/project/src/main.ald:1:15]
 1 │ import @alder/
   · ┬
   · ╰── this import starts here
   ╰────
