crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__import_path_segment.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: import ~/db/Users
---
alder::syntax

  × I was expecting a module path segment after `/`
   ╭─[/project/src/main.ald:1:13]
 1 │ import ~/db/Users
   · ┬           ┬
   · │           ╰── expected a lower-case name
   · ╰── this import starts here
   ╰────
